--- a/api/pom.xml
+++ b/api/pom.xml
@@ -20,6 +20,7 @@
         <spring-boot-starter-validation.version>2.3.12.RELEASE</spring-boot-starter-validation.version>
         <postgresql.version>42.4.1</postgresql.version>
         <log4j.version>1.2.17</log4j.version>
+        <mysql-connector-java.version.custom>8.0.30</mysql-connector-java.version.custom>
     </properties>
 
     <dependencies>
@@ -64,6 +65,13 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version.custom}</version>
         </dependency>
 
         <dependency>
