--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -15,17 +15,17 @@ spring:
 
   datasource:
     hikari:
-      jdbc-url: "jdbc:postgresql://localhost:5432/TestProject"
+      jdbc-url: "jdbc:mysql://localhost:3306/testproject" #TestProjectMYSQL #"jdbc:postgresql://localhost:5432/TestProject"
       maximum-pool-size: 10
-      driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: postgres
-    url: "jdbc:postgresql://localhost:5432/TestProject"
+      driver-class-name: com.mysql.cj.jdbc.Driver #org.postgresql.Driver
+    username: root #postgres
+    password: root #postgres
+    url: "jdbc:mysql://localhost:3306/testproject" #"jdbc:postgresql://localhost:5432/TestProject"
 
   jpa:
     properties:
       javax.persistence.validation.mode: none
-      hibernate.dialect: org.hibernate.dialect.PostgreSQL10Dialect
+      hibernate.dialect: org.hibernate.dialect.MySQLDialect #org.hibernate.dialect.PostgreSQL10Dialect
       hibernate.show_sql: true
       hibernate.connection.characterEncoding: utf8mb4
       hibernate.connection.CharSet: utf8mb4
