--- a/common/pom.xml
+++ b/common/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <lombok.version.custom>1.18.22</lombok.version.custom>
+        <mysql-connector-java.version.custom>8.0.30</mysql-connector-java.version.custom>
     </properties>
 
     <dependencies>
@@ -53,6 +54,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version.custom}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.hibernate</groupId>
